--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/zhuopu-zhou/Firebase-zz-jn#readme",
   "dependencies": {
-    "firebase-admin": "^10.0.2"
+    "express": "^4.17.2",
+    "firebase-admin": "^10.0.2",
+    "nodemon": "^2.0.15"
   }
 }
